--- a/src/main/resources/assets/xdbar/lang/en_us.json
+++ b/src/main/resources/assets/xdbar/lang/en_us.json
@@ -3,6 +3,7 @@
   "xdbar.config.levelIndicator": "Level Indicator",
   "xdbar.config.levelShadow": "Shadow",
   "xdbar.config.levelColor": "Color",
+  "xdbar.config.levelOutline": "Outline",
   "xdbar.config.offsetY": "Y Offset",
   "xdbar.config.keepXPBarWithLocator": "Keep XP Bar with Locator Bar"
 }
