--- a/src/main/resources/assets/xdbar/lang/en_us.json
+++ b/src/main/resources/assets/xdbar/lang/en_us.json
@@ -5,5 +5,6 @@
   "xdbar.config.levelColor": "Color",
   "xdbar.config.levelOutline": "Outline",
   "xdbar.config.offsetY": "Y Offset",
-  "xdbar.config.keepXPBarWithLocator": "Keep XP Bar with Locator Bar"
+  "xdbar.config.locators": "Locator Pins",
+  "xdbar.config.locatorBg": "Locator Background"
 }
