--- a/src/main/resources/assets/xdbar/lang/en_us.json
+++ b/src/main/resources/assets/xdbar/lang/en_us.json
@@ -1,8 +1,10 @@
 {
   "xdbar.config.title": "XDBar Config",
-  "xdbar.setting.locatorBar.pins": "Waypoint Pins",
+  "xdbar.setting.locatorBar.pins": "Pins",
   "xdbar.setting.locatorBar.background": "Locator Background",
-  "xdbar.setting.locatorBar.arrows": "Waypoint Pitch Arrows",
+  "xdbar.setting.locatorBar.arrows": "Pitch Arrows",
+  "xdbar.setting.locatorBar.coloredArrows": "Colored Arrows",
+  "xdbar.setting.locatorBar.distance": "Show distance",
   "xdbar.setting.level.outline": "Text Outline",
   "xdbar.setting.level.shadow": "Text Shadow",
   "xdbar.setting.level.color": "Text Color",
@@ -10,5 +12,6 @@
   "xdbar.config.colortip": "Insert a valid RGB Hex value!\nExample: 80FF20",
   "xdbar.config.intbox": "Insert a valid number between %s and %s.",
   "xdbar.config.category.locator": "Locator Bar Changes",
-  "xdbar.config.category.level": "Level Indicator Visuals"
+  "xdbar.config.category.level": "Level Indicator Visuals",
+  "xdbar.config.stylecycle": "Style"
 }
